Update test/nashorn/src/jdk/nashorn/api/scripting/test/ScriptObjectMirrorTest.java
Co-authored-by: Attila Szegedi <szegedi@users.noreply.github.com>